--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img src="/images/box1.jpg" alt="Людина працює за комп'ютером" width="370" /></li>
-          <li><img src="/images/box2.jpg" alt="Людина працює за комп'ютером" width="370" /></li>
-          <li><img src="/images/box3.jpg" alt="Людина працює за комп'ютером" width="370" /></li>
+          <li><img src="./images/box1.jpg" alt="Людина працює за комп'ютером" width="370" /></li>
+          <li><img src="./images/box2.jpg" alt="Людина працює за комп'ютером" width="370" /></li>
+          <li><img src="./images/box3.jpg" alt="Людина працює за комп'ютером" width="370" /></li>
         </ul>
       </section>
 
@@ -70,22 +70,30 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="/images/teamcard1.jpg" alt="Чоловік в окулярах що посміхається" width="270" />
+            <img
+              src="./images/teamcard1.jpg"
+              alt="Чоловік в окулярах що посміхається"
+              width="270"
+            />
             <h3>Ігор Дем'яненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img src="/images/teamcard2.jpg" alt="Жінка в окулярах що посміхається" width="270" />
+            <img src="./images/teamcard2.jpg" alt="Жінка в окулярах що посміхається" width="270" />
             <h3>Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <img src="/images/teamcard3.jpg" alt="Чоловік що посміхається" width="270" />
+            <img src="./images/teamcard3.jpg" alt="Чоловік що посміхається" width="270" />
             <h3>Микола Тарасов</h3>
             <p lang="en">Marketing</p>
           </li>
           <li>
-            <img src="/images/teamcard4.jpg" alt="Чоловік в окулярах що посміхається" width="270" />
+            <img
+              src="./images/teamcard4.jpg"
+              alt="Чоловік в окулярах що посміхається"
+              width="270"
+            />
             <h3>Михайло Єрмаков</h3>
             <p lang="en">UI Designer</p>
           </li>
